--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "langchain-groq>=0.3.6",
     "langserve>=0.3.1",
     "python-dotenv>=1.1.1",
+    "sse-starlette>=3.0.2",
     "streamlit>=1.47.1",
     "uvicorn>=0.35.0",
 ]
