--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,14 +5,19 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "bs4>=0.0.2",
+    "chromadb>=1.0.17",
     "dotenv>=0.9.9",
+    "faiss-cpu>=1.12.0",
     "fastapi>=0.116.1",
+    "ipykernel>=6.30.1",
     "langchain>=0.3.27",
     "langchain-community>=0.3.27",
     "langchain-core>=0.3.72",
     "langchain-groq>=0.3.6",
     "langchain-ollama>=0.3.6",
     "langserve>=0.3.1",
+    "pypdf>=6.0.0",
     "python-dotenv>=1.1.1",
     "sse-starlette>=3.0.2",
     "streamlit>=1.47.1",
