--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "langserve>=0.3.1",
     "pypdf>=6.0.0",
     "python-dotenv>=1.1.1",
+    "sentence-transformers>=5.1.0",
     "sse-starlette>=3.0.2",
     "streamlit>=1.47.1",
     "uvicorn>=0.35.0",
